2023-04-18  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with TYPO3 12

2022-01-25  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with TYPO3 10: Read needed file class.ext_update.php

2022-01-20  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with TYPO3 10: Remove file class.ext_update.php
    * add requirement for the extension addons_em: This is needed for the Extension Manager if the file ext_tables_static+adt.sql has been modified manually by the admin.

2022-01-11  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with PHP 8: Remove the check for a PHP version.

2021-11-30  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with TYPO3 11: No other modifications.

2021-07-13  Franz Holzinger  <franz@ttproducts.de>
    * Use the domain jambagecom in the composer.json.

2020-11-24  Franz Holzinger  <franz@ttproducts.de>
    * fix issue from static_info_tables_de: Undo part of latest pullrequest to the former version 10.0 support.

2020-11-18  Franz Holzinger  <franz@ttproducts.de>
    * Important bugfix to the former version 10.0 support.
    * Simplification of the TCA files.

2019-11-27  Franz Holzinger  <franz@ttproducts.de>
    * compatibility with TYPO3 10: Add the file Configuration/Extbase/Persistence/Classes.php.

2019-02-21  Franz Holzinger  <franz@ttproducts.de>
    * compatibility for TYPO3 9.5

2018-08-07  Franz Holzinger  <franz@ttproducts.de>
    * bugfix: use typo3/cms-core in composer.json
    * use the $tablename variable for the TCA

2018-08-06  Franz Holzinger  <franz@ttproducts.de>
    * adaptions to composer.json

2017-05-17  Franz Holzinger  <franz@ttproducts.de>
    * remove autoload psr-4 for SJBR\StaticInfoTables\ from composer.json

2017-04-10  Franz Holzinger  <franz@ttproducts.de>
    * modify extension version
    * add a composer.json file

2017-03-11  Franz Holzinger  <franz@ttproducts.de>
    * ready for TYPO3 8.x

2015-10-20  Franz Holzinger  <franz@ttproducts.de>