@@ -1,42 +1,0 @@
-config.tx_extbase {
-	persistence {
-		classes {
-			SJBR\StaticInfoTables\Domain\Model\Country {
-				mapping {
-					columns {
-						cn_short_da.mapOnProperty = shortNameDa
-					}
-				}
-			}
-			SJBR\StaticInfoTables\Domain\Model\CountryZone {
-				mapping {
-					columns {
-						zn_name_da.mapOnProperty = nameDa
-					}
-				}
-			}
-			SJBR\StaticInfoTables\Domain\Model\Currency {
-				mapping {
-					columns {
-						cu_name_da.mapOnProperty = nameDa
-						cu_sub_name_da.mapOnProperty = subdivisionNameDa
-					}
-				}
-			}
-			SJBR\StaticInfoTables\Domain\Model\Language {
-				mapping {
-					columns {
-						lg_name_da.mapOnProperty = nameDa
-					}
-				}
-			}
-			SJBR\StaticInfoTables\Domain\Model\Territory {
-				mapping {
-					columns {
-						tr_name_da.mapOnProperty = nameDa
-					}
-				}
-			}
-		}
-	}
-}
